--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .album-card { background: #181818; padding: 16px; border-radius: 8px; cursor: pointer; transition: 0.3s ease; position: relative; }
         .album-card:hover { background: #282828; }
         .album-card img { width: 100%; border-radius: 6px; aspect-ratio: 1/1; object-fit: cover; box-shadow: 0 8px 24px rgba(0,0,0,0.5); }
-        .album-card h3 { font-size: 15px; margin: 15px 0 5px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-weight: 600; }
+        .album-card h3 { font-size: 14px; margin: 15px 0 5px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-weight: 600; }
         
         .play-hover { position: absolute; bottom: 85px; right: 25px; width: 48px; height: 48px; background: #1DB954; border-radius: 50%; display: flex; align-items: center; justify-content: center; opacity: 0; transform: translateY(10px); transition: 0.3s; box-shadow: 0 8px 16px rgba(0,0,0,0.3); }
         .album-card:hover .play-hover { opacity: 1; transform: translateY(0); }
@@ -52,7 +52,7 @@
     </header>
 
     <div class="content">
-        <h2 class="section-title">Kitaplığın</h2>
+        <h2 class="section-title">En Hit Parçalar</h2>
         <div class="album-grid" id="mainGrid"></div>
     </div>
 
@@ -90,7 +90,8 @@
         const audio = document.getElementById('audio');
         
         const songs = [
-            {t: 'Perde', f: 'PERDE.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5dxa8f6k/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005349.png'},
+            {t: 'Çok Pardon', f: 'askimcokpardon.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jk7zn96u/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20012651.png'},
+            {t: 'Perde', f: 'PERDE.mp4', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5dxa8f6k/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005349.png'},
             {t: 'Snap', f: 'Snap.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/qw7fyz5b/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005020.png'},
             {t: 'AL NACER!', f: 'AL NACER.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/ub85xg80/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20221823.png'},
             {t: 'VAI VAI TRAIR', f: 'VAI VAI TRAIR.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/o91q4cbc/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20222249.png'},
