--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <div class="content">
-        <h2 class="section-title">En Hit Parçalar</h2>
+        <h2 class="section-title">Kitaplığın</h2>
         <div class="album-grid" id="mainGrid"></div>
     </div>
 
@@ -90,6 +90,8 @@
         const audio = document.getElementById('audio');
         
         const songs = [
+            {t: 'Kusura Bakma', f: 'blok3kusurabakma.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/y1s0n87i/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20014128.png'},
+            {t: 'Git', f: 'blok3git.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/8eeeqfnz/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20013949.png'},
             {t: 'Çok Pardon', f: 'askimcokpardon.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jk7zn96u/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20012651.png'},
             {t: 'Perde', f: 'PERDE.mp4', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5dxa8f6k/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005349.png'},
             {t: 'Snap', f: 'Snap.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/qw7fyz5b/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005020.png'},
