--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <div class="content">
-        <h2 class="section-title">Popüler Parçalar</h2>
+        <h2 class="section-title">Kitaplığın</h2>
         <div class="album-grid" id="mainGrid"></div>
     </div>
 
@@ -82,6 +82,7 @@
     <script>
         const audio = document.getElementById('audio');
         const songs = [
+            {t: 'Manifest', f: 'manifest.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/yf1rz4xw/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005020.png'},
             {t: 'Nada Nada', f: 'Nada.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/vn8mx2sq/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20014523.png'},
             {t: 'Skyfall', f: 'skyfall.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5hv1kkvh/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20014845.png'},
             {t: 'No Era Amor', f: 'noeraamor.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5xok8sfy/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20015041.png'},
