--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script>
         const audio = document.getElementById('audio');
         const songs = [
+            {t: 'Passo Bem Solto', f: 'passobemsolto.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/w9bumvcb/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20021844.png'},
             {t: 'Funk de Beleza', f: 'funkdebeleza.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/zmzlrgf7/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20021131.png'},
             {t: 'Zehir', f: 'zehir.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/yf1rz4xw/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005020.png'},
             {t: 'Manifest', f: 'manifest.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/yf1rz4xw/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20005020.png'},
