--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script>
         const audio = document.getElementById('audio');
         const songs = [
+            {t: 'Bi Yarının Düğünündeyim', f: 'biyarinindugunundeyim.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/712xzyxt/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20022511.png'},
             {t: 'Sonbahar', f: 'sonbahar.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4sjwtpo2/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20022242.png'},
             {t: 'Passo Bem Solto', f: 'passobemsolto.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/w9bumvcb/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20021844.png'},
             {t: 'Funk de Beleza', f: 'funkdebeleza.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/zmzlrgf7/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20021131.png'},
