--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     <script>
         const audio = document.getElementById('audio');
         const songs = [
+            {t: 'Can Kırıkları', f: 'cankriklari.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/ala8f2kx/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20111457.png'},
+            {t: 'Yalnız', f: 'yalniz.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/3lyf5u0j/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20110937.png'},
             {t: 'Sigara', f: 'sigara.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/elpiin1g/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20023553.png'},
             {t: 'Mayın Tarlası', f: 'mayintarlasi.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/qabmnosl/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20023515.png'},
             {t: 'Bi Yarının Düğünündeyim', f: 'biyarinindugunundeyim.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/712xzyxt/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20022511.png'},
