--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             {t: 'VAI VAI TRAIR', f: 'VAI VAI TRAIR.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/o91q4cbc/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20222249.png'},
             {t: 'Montagem Rugada', f: 'MONTAGEM RUGADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4aiyuq0d/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224204.png'},
             {t: 'Montagem Supersonic', f: 'supersonic.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5fkiw4ml/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20235453.png'},
+            {t: 'SUNRISE', f: 'sunrise.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/tv4nrmap/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20080344.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
