--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             {t: 'Montagem Supersonic', f: 'supersonic.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/5fkiw4ml/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20235453.png'},
             {t: 'SUNRISE', f: 'sunrise.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/tv4nrmap/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20080344.png'},
             {t: 'FRESH', f: 'fresh.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/vgejr6dg/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20080556.png'},
+            {t: 'Çaresizim', f: 'caresizim.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/py1fg7xg/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20184710.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
