--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
             {t: 'SUNRISE', f: 'sunrise.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/tv4nrmap/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20080344.png'},
             {t: 'FRESH', f: 'fresh.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/vgejr6dg/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20080556.png'},
             {t: 'Çaresizim', f: 'caresizim.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/refs/heads/main/py1fg7xg/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20184710.png'},
+            {t: 'Movie', f: 'movie.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1ble57dx/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-24%20173939.png'},
+            {t: 'Baba', f: 'baba.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/coyteems/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-24%20174402.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
