--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             {t: 'Çaresizim', f: 'caresizim.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/refs/heads/main/py1fg7xg/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-22%20184710.png'},
             {t: 'Movie', f: 'movie.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1ble57dx/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-24%20173939.png'},
             {t: 'Baba', f: 'baba.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/coyteems/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-24%20174402.png'},
+            {t: 'Homage Funk', f: 'homagefunk.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4yx7dp9s/image.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
