--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
         <div class="footer-info">
             <p id="copyText">© 2025 - 2026 Credos Music. Tüm Hakları Saklıdır.</p>
+            <p id="copyText">music.credos.qzz.io Reklamsız Premiumsuz Müzik Keyfi.</p>
             <a href="https://www.kvkk.gov.tr" target="_blank" class="kvkk-link" id="kvkkBtn">KVKK Aydınlatma Metni ve Sözleşmesi</a>
         </div>
     </div>
