--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <script>
         const songs = [
-            {t: 'ALÆCARTE-X', f: 'ALÆCARTE-X.mp4', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/p0iuu8ex/credos_music_logo.png'},
+            {t: 'ALÆCARTE-X', f: 'alacarte.mp4', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/p0iuu8ex/credos_music_logo.png'},
             {t: 'Nedenini Sorma', f: 'nedeninisorma.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/b12klnxm/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20120937.png'},
             {t: 'Dene', f: 'uzidene.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/eomujsdt/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20120525.png'},
             {t: 'Can Kırıkları', f: 'cankiriklari.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/ala8f2kx/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-21%20111457.png'},
@@ -239,4 +239,5 @@
         }
     </script>
 </body>
+
 </html>
