--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    <script src="script.js"></script>
     <style>
         body { background: #000; color: #fff; font-family: 'Montserrat', sans-serif; height: 100vh; display: flex; align-items: center; justify-content: center; margin: 0; }
         .reg-card { background: #121212; padding: 50px; border-radius: 15px; text-align: center; width: 100%; max-width: 400px; border: 1px solid #1DB954; }
