montagem batchi eklendi

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             {t: 'Homage Funk', f: 'homagefunk.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4yx7dp9s/image.png'},
             {t: 'MONTAGEM MIAU', f: 'montagem miau.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/h4v9iah0/image.png'},
             {t: 'Sao Paulo', f: 'sao paulo.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/fmfzfvxb/image.png'},
+            {t: 'MONTAGEM BATCHI', f: 'montagem batchi.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4rfjjui4/image.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
