--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
             {t: 'MONTAGEM BATCHI', f: 'montagem batchi.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4rfjjui4/image.png'},
             {t: 'Ankara Rüzgarı', f: 'Ankara Ruzgari.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/x2ds05yx/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-26%20163741.png'},
             {t: 'Demet Akalın', f: 'demetakalin.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/zslwmmq3/image.png'},
+            {t: 'Waste', f: 'waste.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/o1eltszb/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-26%20195859.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
