--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             {t: 'Bitmiyor', f: 'bitmiyor.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/anb7wmb1/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-26%20200814.png'},
             {t: 'Dar Geldi Sana Ankara', f: 'ankara.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/s8nldwfb/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-26%20201342.png'},
             {t: 'ACIDO III', f: 'ACIDO III.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/517a6d9i/image.png'},
+            {t: 'Tekel Mavisi', f: 'tekelmavisi.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jl8a4sa0/image.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
