--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
             {t: 'ACIDO III', f: 'ACIDO III.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/517a6d9i/image.png'},
             {t: 'Tekel Mavisi', f: 'tekelmavisi.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jl8a4sa0/image.png'},
             {t: '911 CARRERA', f: '911 CARRERA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/zjtlk3kd/image.png'},
+            {t: 'Hiç Işık Yok', f: 'hicisikyok.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jl8a4sa0/image.png'},
+            {t: 'Koşu Arkası Hayatlar', f: 'kosuarkasihayatlar.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/8n86naey/image.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
