--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             {t: '911 CARRERA', f: '911 CARRERA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/zjtlk3kd/image.png'},
             {t: 'Hiç Işık Yok', f: 'hicisikyok.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jl8a4sa0/image.png'},
             {t: 'Koşu Arkası Hayatlar', f: 'kosuarkasihayatlar.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/8n86naey/image.png'},
+            {t: 'Medcezir', f: 'Medcezir.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/fh4c5vzy/image.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
