--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             {t: 'Medcezir', f: 'Medcezir.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/fh4c5vzy/image.png'},
             {t: 'Oğlumun Tabancası', f: 'oglumuntabancasi.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/0khikzhj/image.png'},
             {t: 'MONTAGEM XONADA', f: 'MONTAGEM XONADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/jqyupaz5/image.png'},
+            {t: 'MONTAGEM COMA', f: 'MONTAGEM COMA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/4mltgo52/image.png'},
             {t: 'Montagem Tomada', f: 'MONTAGEM TOMADA.mp3', i: 'https://raw.githubusercontent.com/cdexecctru/fileupld/main/1qbqlz3n/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202025-12-20%20224338.png'}
         ];
 
